--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 			function animate() {
 				requestAnimationFrame( animate );
 				renderer.render( scene, camera );
-				mesh.rotation.x += .1
-				mesh.rotation.y += .1
+				mesh.rotation.x += .1;
+				mesh.rotation.y += .1;
 			}
 		</script>
 
