--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 
-		<script src="js\three.min.js"></script>
+		<script src="js/three.min.js"></script>
 
 		<script>
 		    // Declare, but do not yet initialize needed variables.
